# mxlm

./: .eslintrc.cjs  .gitignore  AGENTS.md  README.md  design_spec.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prd.md  pyproject.toml  tasks.md  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
docker/: README.md
infrastructure/: README.md
infrastructure/cdk/: cdk.json  package.json  tsconfig.json  vitest.config.ts
infrastructure/cdk/src/: core-infrastructure-stack.ts
infrastructure/cdk/src/config/: environments.ts
infrastructure/cdk/test/: core-infrastructure-stack.test.ts
monitoring/: prometheus.yml
python/src/mxlm/: __init__.py
python/tests/: test_placeholder.py
