[tool.poetry]
name = "mxlm-python"
version = "0.1.0"
description = "Python services for GA Maintenance LogbookLM"
authors = ["GA Maintenance Team <dev@example.com>"]
packages = [
  { include = "mxlm", from = "python/src" }
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["python/src"]
testpaths = ["python/tests"]
